# EngineModule

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: CompilerWarnings.cmake  EngineModule.cmake  Sanitizers.cmake
modules/core/: CMakeLists.txt
modules/core/include/engine/core/: Application.hpp  FixedRatePacer.hpp  FrameTimer.hpp  IFramePacer.hpp  NullPacer.hpp  Platform.hpp  Run.hpp
modules/core/include/engine/core/ecs/: Column.hpp  ComponentMeta.hpp  Entity.hpp  EntityAllocator.hpp  SparseStorage.hpp  StorageKind.hpp  Table.hpp  TypeId.hpp  World.hpp
modules/core/include/engine/core/log/: Assert.hpp  Log.hpp
modules/core/include/engine/core/memory/: IAllocator.hpp  LinearAllocator.hpp  Memory.hpp  PoolAllocator.hpp
modules/core/include/engine/core/profile/: Profile.hpp
modules/core/src/: Application.cpp  Clock.cpp  Clock.hpp  Core.cpp  FixedRatePacer.cpp  FrameTimer.cpp  NullPacer.cpp  Run.cpp
modules/core/src/ecs/: EntityAllocator.cpp  World.cpp
modules/core/src/log/: Log.cpp
modules/core/src/memory/: Align.hpp  LinearAllocator.cpp  Memory.cpp  PoolAllocator.cpp
modules/core/src/profile/: Profile.cpp
sandbox/: CMakeLists.txt
sandbox/src/: SandboxApp.cpp  SandboxApp.hpp  main.cpp
tests/: CMakeLists.txt
tests/core/: AllocatorTest.cpp  ColumnTest.cpp  CoreTest.cpp  EntityTest.cpp  FrameTimerTest.cpp  LogTest.cpp  ProfileTest.cpp  SparseStorageTest.cpp  StorageKindTest.cpp  TableTest.cpp  TypeIdTest.cpp  WorldTest.cpp
